--- a/index.html
+++ b/index.html
@@ -2,33 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>iLibrary</title>
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/app.js?q=1"></script>
+    <title>Biblioteka</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="js/app.js"></script>
 </head>
+
 <body>
-<div class="w3-container" style="width:1000px;">
-    <div class="w3-panel w3-teal w3-round-xxlarge">
-        <p>All books list</p>
-    </div>
-    <div class="w3-panel w3-khaki w3-padding-16 w3-round-xxlarge">
-        <form>
-            <div class="form-group">
-                <label>Title:</label>
-                <input type="text" name="title" required>
-            </div>
-            <div class="form-group">
-                <label>Author:</label>
-                <input type="text" name="author" required>
-            </div>
-            <div class="form-group">
-                <label>Description:</label>
-                <input type="text" name="description" required>
-            </div>
-            <button type="submit" class="w3-btn w3-black">Add book</button>
-        </form>
-    </div>
-</div>
+
+<div class="message">
+    brak komunikatu
+</div><hr>
+
+<div>
+    <form>
+        <div>tytuł</div>
+        <input id="newTitle" name="newTitle" type="text">
+        <div>autor</div>
+        <input id="newAuthor" name="newAuthor" type="text">
+        <input id="addBtn" type="button" value="dodaj książkę">
+    </form>
+</div><hr>
+
+<div class="modify" hidden>
+    <form>
+        <div>tytuł</div>
+        <input id="changedTitle" name="changedTitle" type="text">
+        <div>autor</div>
+        <input id="changedAuthor" name="changedAuthor" type="text">
+        <input id="modifyBtn2" type="button" value="zmodyfikuj książkę">
+    </form>
+</div><hr>
+
+<button id="showBtn">pokaż/ukryj wszystkie książki</button>
+
+<div class="allBooks" hidden></div><hr>
+
+
 </body>
 </html>
