--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <input id="newTitle" name="newTitle" type="text">
         <div>autor</div>
         <input id="newAuthor" name="newAuthor" type="text">
+        <div>opis</div>
+        <input id="newDesc" name="newDesc" type="text">
         <input id="addBtn" type="button" value="dodaj książkę">
     </form>
 </div><hr>
