--- a/index.html
+++ b/index.html
@@ -2,52 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>iLibrary</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="js/app.js"></script>
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="css/style.css">
+    <title>$Title$</title>
 </head>
-
-<body class="w3-panel w3-yellow">
-
-<div class="w3-container w3-teal big-font">
-    <a style="font-size: 250%" href="index.html"><b>iLibrary</b></a>
-</div>
-
-<div class="w3-panel" id="middle">
-    <div class="modify w3-panel w3-grey w3-round-xlarge" hidden>
-        <form>
-            <label><b>MODIFY THE BOOK</b></label>
-            <div>title</div>
-            <input id="changedTitle" name="changedTitle" type="text">
-            <div>author</div>
-            <input id="changedAuthor" name="changedAuthor" type="text">
-            <div>description</div>
-            <input id="changedDesc" name="changedDesc" type="text">
-            <br>
-            <input id="modifyButton" type="submit" value="update book">
-        </form>
-    </div>
-
-    <div id="right" class="w3-panel w3-grey w3-round-xlarge">
-        <form>
-            <label><b>ADD NEW BOOK</b></label>
-            <div>title</div>
-            <input id="newTitle" name="newTitle" type="text" required>
-            <div>author</div>
-            <input id="newAuthor" name="newAuthor" type="text" required>
-            <div>description</div>
-            <input id="newDesc" name="newDesc" type="text" required>
-            <br>
-            <input id="addBtn" type="submit" value="add">
-        </form>
-    </div>
-
-    <div id="left" class="w3-panel w3-grey w3-round-xlarge">
-        <label><b>LIST OF ALL AVAILABLE BOOKS</b></label>
-        <div class="allBooks"></div>
-    </div>
-</div>
+<body>
+$END$
 </body>
 </html>
